# proxima

./: .gitignore  404.html  Cargo.toml  Dockerfile  LICENSE  README.md  README.txt  config.yaml  index.html  installation.html  metrics.html  print.html  searchindex.js  searchindex.json
.github/workflows/: docker-image-amd64.yaml  docker-image-arm64.yml  docker-image.yml  mdbook.yml
administration/: caching.html  index.html  rest.html
configuration/: index.html  options.html  server_authentication.html  timeouts.html  urlfailover.html
configuration/endpoints/: index.html  proxy.html  redirect.html  remote_config.html  static.html  vault.html
configuration/global/: index.html
configuration/security/: client_authentication.html  index.html  methods.html  networks.html
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  installation.md  metrics.md  rest.md  usage.md
docs/src/administration/: caching.md  index.md  rest.md
docs/src/configuration/: authentication.md  index.md  methods.md  options.md  security.md  server_authentication.md  syntax.md  timeouts.md  urlfailover.md  whitelist.md
examples/: basic_auth.yaml  bearer_auth.yaml  config.yaml  config_basic_auth.yaml  config_bearer_auth.yaml  config_multilevel.yaml  digest_aith.yaml  digest_auth.yaml  failover_config.yaml  httpconfig.yaml  load_balanced_config.yaml  mixed.yaml  multilevel.yaml
src/: .main.rs.swp  .state.rs.swp  auth.rs  cache.rs  config.rs  config_global.rs  error.rs  handlers.rs  https.rs  main.rs  metrics.rs  path.rs  requests.rs  security.rs  state.rs  urls.rs  vault.rs
src/auth/: anonymous.rs  api_key.rs  auth.rs  basic.rs  bearer.rs  bearer_parent.rs  client.rs  digest.rs  header.rs  jwks.rs  jwt.rs  mod.rs  server.rs  traits.rs
usage/: arguments.html  docker.html  index.html  proxy.html
(+19 files in other folders)
