[package]
name = "rest-proxy-rs"
version = "0.2.11"
description = "ultra fast, simple, http proxy"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
axum = "0.4"
axum-debug = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
clap = "2"
env_logger = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hyper-tls = "0.5"
tower-http = { version = "0.1", features = ["trace", "auth"] }
tower = { version = "0.4", features = ["filter"] }
reqwest = { version = "0.11", features = ["json"] }
native-tls = "0.2"
base64 = "0.13"
url = "2"
