[package]
name = "rust-api-template"
version = "0.0.1"
description = "Rust API Template"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
axum = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
clap = "2"
env_logger = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hyper-tls = "0.5"
tower-http = { version = "0.1", features = ["trace", "auth"] }
tower = { version = "0.4", features = ["filter"] }
reqwest = { version = "0.11", features = ["json"] }
native-tls = "0.2"
base64 = "0.13"
url = { version = "2", features = ["serde"] }
metrics = "0.18"
metrics-exporter-prometheus = "0.8"
axum-extra = "0.1"
